--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	body{margin:0px;}
 	
 	.main{width:100%;height:100%;background-image:url(background.png);}
-	
+	.container{width:100%;height:100%;}
 	.head{width:100%;height:88px;background-color:rgb(95,192,205);
 	position:fixed;color:white;font-size:18px;}
 	.lText{float:left;position:relative;top:50%;transform:translateY(-50%);left:30px;}
