--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 </head>
 <style type="text/css">
+	
 	body{margin:0px;}
 	
 	.main{width:100%;height:100%;background-image:url(background.png);}
@@ -14,17 +15,17 @@
 	.lText{float:left;position:relative;top:50%;transform:translateY(-50%);left:30px;}
 	.rText{float:right;position:relative;top:50%;transform:translateY(-50%);right:30px;}
 	.cText{font-size:24px;position:absolute;top:50%;left:50%;transform:translateY(-50%) translateX(-50%);}
-	.loginBtn{position:fixed;top:427px;width:100%;height:100px;background-color:rgb(95,192,205);
+	.loginBtn{position:fixed;top:337px;width:100%;height:100px;background-color:rgb(95,192,205);
 	color:white;font-size:30px;}
-	.telInput{position:fixed;top:144px;width:100%;display:flex;}
-	.passInput{position:fixed;top:258px;width:100%;display:flex;}
+	.telInput{position:fixed;top:104px;width:100%;display:flex;}
+	.passInput{position:fixed;top:218px;width:100%;display:flex;}
 	
-	.img{margin:30px 30px;float:left;flex:none;}
+	.img{float:left;flex:none;}
 	.inner{height:100px;flex:1;width:inherit}
 	
-	input{width:inherit;height:inherit;border:0px;}
+	input{width:inherit;height:inherit;border:0px;font-size:30px;}
 	
-	.footer{width:100%;height:37px;position:fixed;top:547px;}
+	.footer{width:100%;height:37px;position:fixed;top:457px;}
 	.foot{float:right;padding-right:29px;}
 	a{color:rgb(95,192,205);font-size:18px;text-align:right}
 	
