--- a/index.html
+++ b/index.html
@@ -5,30 +5,7 @@
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 </head>
 <style type="text/css">
-	
-	body{margin:0px;}
-	
-	.main{width:100%;height:100%;background-image:url(background.png);}
-	.container{width:100%;height:100%;}
-	.head{width:100%;height:88px;background-color:rgb(95,192,205);
-	position:fixed;color:white;font-size:18px;}
-	.lText{float:left;position:relative;top:50%;transform:translateY(-50%);left:30px;}
-	.rText{float:right;position:relative;top:50%;transform:translateY(-50%);right:30px;}
-	.cText{font-size:24px;position:absolute;top:50%;left:50%;transform:translateY(-50%) translateX(-50%);}
-	.loginBtn{position:fixed;top:337px;width:100%;height:100px;background-color:rgb(95,192,205);
-	color:white;font-size:30px;}
-	.telInput{position:fixed;top:104px;width:100%;display:flex;}
-	.passInput{position:fixed;top:218px;width:100%;display:flex;}
-	
-	.img{float:left;flex:none;}
-	.inner{height:100px;flex:1;width:inherit}
-	
-	input{width:inherit;height:inherit;border:0px;font-size:30px;}
-	
-	.footer{width:100%;height:37px;position:fixed;top:457px;}
-	.foot{float:right;padding-right:29px;}
-	a{color:rgb(95,192,205);font-size:18px;text-align:right}
-	
+	@import "task4.css";
 </style>
 <body>
 <div class="main">
